# innonautics_moos_dev

./: readme.md  startup.service
moos-ivp-main/ivp/data/: hkust_square.info  hkust_square.tif
moos-ivp-main/ivp/src/pMarineViewer/: CMakeLists.txt  PMV_MOOSApp.cpp
moos-ivp-pavlab-aro/: .gitignore
moos-ivp-pavlab-aro/.svn/: wc.db
moos-ivp-pavlab-aro/missions/alpha_census/: basic_census.opt  basic_dissensus.opt  init_field.sh  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plugs.moos
moos-ivp-pavlab-aro/missions/alpha_heron/: launch_all.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.moos
moos-ivp-pavlab-aro/missions/beta_opinion/: launch.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_pBloomStormCtrl.moos  plug_pGroupComboAlloc.moos  plug_pLogger.moos  plug_pOpinionManager.moos  plug_pProxonoiGridSearch.moos  plug_uSimMarine.moos  update_params.sh
moos-ivp-pavlab-aro/missions/beta_opinion/params/: param1.txt  param2.txt  param4.txt  param5.txt  param6.txt  param8.txt  params_cent.txt
moos-ivp-pavlab-aro/missions/demustering/: batch_dubin_post_process.sh  blaunch.sh  clean.sh  config.txt  dubin_data.cpp  dubin_metrics.sh  dubin_metrics_calc.cpp  dubin_metrics_calc_clustered.cpp  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  pickpos.sh  plug_pLogger.moos  plug_pLogger_sim.moos  plug_uSimMarineV22.moos  tar_unpack.sh
moos-ivp-pavlab-aro/missions/obavoid/: obstacles.txt
moos-ivp-pavlab-aro/missions/ufld_joust_pavlab/: init_field.sh  joust.txt  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos
moos-ivp-pavlab-aro/scripts/: speedUpVid.sh
moos-ivp-pavlab-aro/scripts/opinion_analysis/: plot_data.py  process_opinion_data.sh  quick_calc_odom.sh  simple_calc_data.py  simple_calc_odom.py
moos-ivp-pavlab-aro/src/: CMakeLists.txt
moos-ivp-pavlab-aro/src/dep_pMultiAgentColFilt/: MultiAgentColFilt.cpp
moos-ivp-pavlab-aro/src/iM300/: CMakeLists.txt  M300.cpp  M300.h
moos-ivp-pavlab-aro/src/lib_bhv_demuster/: BHV_Demuster.cpp  BHV_Demuster.h  CMakeLists.txt
moos-ivp-pavlab-aro/src/lib_bhv_random_survey2/: BHV_Scout.cpp  BHV_Scout.h  CMakeLists.txt
moos-ivp-pavlab-aro/src/lib_demuster_geometry/: demuster_geometry.cpp
moos-ivp-pavlab-aro/src/pBathyPath/: BathyPath.cpp
moos-ivp-pavlab-aro/src/pBloomStormCtrl/: BloomStormCtrl.cpp  BloomStormCtrl.h
moos-ivp-pavlab-aro/src/pDemusterAssign/: DemusterAssign.cpp  DemusterAssign.h
moos-ivp-pavlab-aro/src/pDynamicTrafficLight/: DynamicTrafficLight.cpp  DynamicTrafficLight.h
moos-ivp-pavlab-aro/src/pGroupComboAlloc/: GroupComboAlloc.cpp
moos-ivp-pavlab-aro/src/pHVUProtectAssetCtrl/: HVUProtectAssetCtrl.cpp  HVUProtectAssetCtrl.h
moos-ivp-pavlab-aro/src/pHVUProtectNodeCtrl/: HVUProtectNodeCtrl.cpp
moos-ivp-pavlab-aro/src/pProxonoiGridSearch/: ProxGrid.cpp  ProxGrid.h  ProxonoiGridSearch.cpp  ProxonoiGridSearch.h
moos-ivp-pavlab-aro/src/pSumVars/: CMakeLists.txt  SumVars.cpp  SumVars.h  SumVars_Info.cpp  SumVars_Info.h  main.cpp
moos-ivp-pavlab-aro/src/pVoteManager/: CMakeLists.txt  VoteManager.cpp  VoteManager.h  VoteManager_Info.cpp  VoteManager_Info.h  VoteRecord.cpp  VoteRecord.h  main.cpp
moos-ivp-pavlab-aro/src/uAdjPath/: AdjPath.cpp
moos-ivp-pavlab-aro/src/uFldBloomStormSim/: FldBloomStormSim.cpp  FldBloomStormSim.h
moos-ivp-pavlab-aro/src/uFldEvalOption/: CMakeLists.txt  FldEvalOption.cpp  FldEvalOption.h  FldEvalOption_Info.cpp  FldEvalOption_Info.h  main.cpp
moos-ivp-pavlab-aro/src/uOptionMarker/: OptionMarker.cpp  OptionMarker.h
moos-ivp-pavlab-aro/src/uUtilVectorMarker/: CMakeLists.txt  UtilVectorMarker.cpp  UtilVectorMarker.h  UtilVectorMarker_Info.cpp  UtilVectorMarker_Info.h  main.cpp
moos-ivp/ivp/src/pMarineViewer/: CMakeLists.txt
